syntax = "proto3";

package proto;

option go_package = "grpc/proto";

message InsertFileReq {
  string productId = 1;
  string typeModel = 2;
  repeated bytes data = 3;
}

message InsertFileRes {
  uint64 id = 1;
  string productId = 2;
  string typeModel = 3;
  repeated uint64 fileIds = 4;
}

service FileService {
  rpc InsertFile(InsertFileReq) returns (InsertFileRes) {}
}